--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Facebook</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="sytlesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
